[tool.poetry]
name = "cipher_ey2335"
version = "0.1.0"
description = "A great package for hw07! It is the tool to encrypt and decrypt text using Caesar Cipher."
authors = ["Ega Kurnia Yazid"]
license = "MIT"
readme = "README.md"
documentation = 'https://cipher-yazid-ega.readthedocs.io/'
homepage = "https://github.com/QMSS-G5072-2022/cipher_yazid_ega"
repository = "https://github.com/QMSS-G5072-2022/cipher_yazid_ega"

[tool.poetry.dependencies]
python = "^3.9.1"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
myst-nb = "^0.17.1"
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.0.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
